<resources>
    <string name="app_name">Tank</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="toRegister">注册页面</string>
    <string name="password">密码：</string>
    <string name="toInputPassword">清输入注册密码...</string>
    <string name="inputPassword">清输入密码...</string>
    <string name="inputAccount">请输入用户名...</string>
    <string name="toInputAccount">请输入注册用户名...</string>
    <string name="account">用户名：</string>
    <string name="account_info">登陆用户：</string>
    <string name="withComputerTime_info">单机对战次数：</string>
    <string name="withBlueTime_info">蓝牙游戏次数：</string>
    <string name="withInternetTime_info">网络对战次数：</string>
    <string name="winComputerTime_info">单机胜利次数：</string>
    <string name="winBlueTime_info">蓝牙胜利次数：</string>
    <string name="winInternetTime_info">网络胜利次数：</string>
    <string name="inputInfo">发送的信息...</string>
</resources>