<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_full"
    android:orientation="vertical">

    <yong.tank.modal.WebInfo xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/layout_full"
        android:orientation="vertical"
        android:id="@+id/web_info">
        <!--用户名界面-->
        <LinearLayout
            style="@style/layout_vertical"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                style="@style/layout_horizontal"
                android:layout_weight="3"
                android:text="用户信息界面"
                />
            <TextView
                style="@style/layout_horizontal"
                android:layout_weight="1"
                android:text="用户名："
                />
            <TextView
                android:id="@+id/userAccount_info"
                style="@style/layout_horizontal"
                android:layout_weight="1"
                android:text="123"
                />
        </LinearLayout>
        <!--用户信息界面-->
        <LinearLayout
            style="@style/layout_vertical"
            android:layout_weight="2"
            android:orientation="vertical">
            <LinearLayout
                style="@style/layout_vertical"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/layout_horizontal"
                    android:layout_weight="1"
                    android:text="@string/withComputerTime_info"
                    />
                <TextView
                    android:id="@+id/withComputerTime_info"
                    style="@style/layout_horizontal"
                    android:layout_weight="1"
                    android:text="123"
                    />
                <TextView
                    style="@style/layout_horizontal"
                    android:layout_weight="1"
                    android:text="@string/withBlueTime_info"
                    />
                <TextView
                    android:id="@+id/withBlueTime_info"
                    style="@style/layout_horizontal"
                    android:layout_weight="1"
                    android:text="123"
                    />
                <TextView
                    style="@style/layout_horizontal"
                    android:layout_weight="1"
                    android:text="@string/withInternetTime_info"
                    />
                <TextView
                    android:id="@+id/withInternetTime_info"
                    style="@style/layout_horizontal"
                    android:layout_weight="1"
                    android:text="123"
                    />

            </LinearLayout>

            <LinearLayout
                style="@style/layout_vertical"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    style="@style/layout_horizontal"
                    android:layout_weight="1"
                    android:text="@string/winComputerTime_info"
                    />
                <TextView
                    android:id="@+id/winComputerTime_info"
                    style="@style/layout_horizontal"
                    android:layout_weight="1"
                    android:text="123"
                    />
                <TextView
                    style="@style/layout_horizontal"
                    android:layout_weight="1"
                    android:text="@string/winBlueTime_info"
                    />
                <TextView
                    android:id="@+id/winBlueTime_info"
                    style="@style/layout_horizontal"
                    android:layout_weight="1"
                    android:text="123"
                    />
                <TextView
                    style="@style/layout_horizontal"
                    android:layout_weight="1"
                    android:text="@string/winInternetTime_info"
                    />
                <TextView
                    android:id="@+id/winInternetTime_info"
                    style="@style/layout_horizontal"
                    android:layout_weight="1"
                    android:text="123"
                    />
            </LinearLayout>
        </LinearLayout>
        <!--房间界面-->
        <LinearLayout
            style="@style/layout_vertical"
            android:layout_weight="5"
            android:orientation="vertical">
            <LinearLayout
                style="@style/layout_vertical"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    style="@style/layout_horizontal"
                    android:layout_weight="1"
                    android:text="服务器上总房间数"
                    />
                <TextView
                    android:id="@+id/allRoomNum"
                    style="@style/layout_horizontal"
                    android:layout_weight="1"
                    android:text="123"
                    />

                <TextView
                    style="@style/layout_horizontal"
                    android:layout_weight="1"
                    android:text="服务器可接入房间数"
                    />

                <TextView
                    android:id="@+id/roomAvailable"
                    style="@style/layout_horizontal"
                    android:layout_weight="1"
                    android:text="123"
                    />
            </LinearLayout>
            <LinearLayout
                style="@style/layout_vertical"
                android:layout_weight="4"
                android:orientation="vertical">
                <LinearLayout
                    style="@style/layout_vertical"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        style="@style/layout_horizontal"
                        android:layout_weight="2"
                        android:text="可接入房间列表："
                        />
                    <Button
                        android:id="@+id/refreshRoom"
                        style="@style/layout_horizontal"
                        android:layout_weight="1"
                        android:text="更新房间信息"
                        />
                </LinearLayout>
                    <ListView
                        android:layout_weight="5"
                        android:id="@+id/list_room"
                        style="@style/layout_vertical"
                        />

            </LinearLayout>
        </LinearLayout>
        <!--按钮界面-->
        <LinearLayout
            style="@style/layout_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/creatNewRoom"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="创建新的房间"
                />
        </LinearLayout>

    </yong.tank.modal.WebInfo>

</LinearLayout>
